# Doc-Generation

./: .readthedocs.yaml  CONTRIBUTING.md  README.md  build_images.sh  omnia.yml
.windsurf/workflows/: build-content.md  check-content.md  collect_plan.md  compare-ai-manual.md
ContainerFile/kubespray/: Dockerfile  entrypoint.sh  pyproject.toml
ContainerFile/omnia_core/: Dockerfile  cert-copy.sh  entrypoint.sh  pyproject.toml
ContainerFile/pcs_container/: Dockerfile  entrypoint.sh  remote-xcatd-check
ContainerFile/provision/files/: Dockerfile  configeth.patch  omnia.service  pyproject.toml  temp_post_rhel8  xcat-init.bash  xcat-init.service
docs/: README.rst
docs/Backup/: hld.doc
docs/PLANNING/: buildstream-ai-vs-manual-comparison.md  buildstream-content-plan.md  buildstream-quality-assessment-report.md  buildstream_content_plan.json  content-plan.md  minimal-os-update-plan.md  omnia_21_upgrade_content_plan.md  quality-assessment-report.md  terminology-validation-sample.md  victoria_logs_cluster_mode_content_plan.md
docs/SOURCE MATERIALS/: BuildStreaM_HLD_v1.0.md  BuildStream_Transcription_GitLab.md  JIRA_UserStory.txt  Upgrade_demo_transcription.txt  demo_transcription.md  unit_test.txt
docs/XML/: about_saving_files_word.dita  how_to_save_file_word.dita  supported_file_types.dita
docs/source/: RHEL_prereq.rst  bestpractices.rst  index.rst  limitations.rst  (+4 more)
input/: provision_config.yml  telemetry_config.yml
monitor/: monitor.yml
provision/: prepare_cp.yml
spec-driven/: Spec-Driven-Development-Approach.md  project_plan.md
telemetry/: telemetry.yml
(+349 files in other folders)
