[project]
name = "omnia_core"
version = "0.1.0"
description = "Python environment for the Omnia Core container."
requires-python = ">= 3.11"
dependencies = [
    "psycopg2-binary==2.9.10",
    "requests==2.32.4",
    "pyarrow",
    "pandas==2.2.3",
    "passlib",
    "pulp-cli[pygments]",
    "netaddr",
    "pexpect==4.9.0",
    "pyinstaller",
    "psutil==6.1.1",
    "commented-configparser",
    "pyyaml",
    "PyMySQL",
    "omsdk",
    "pysnmp",
    "kubernetes",
    "cryptography==44.0.1",
    "logger",
    "prettytable==3.14.0",
    "toml==0.10.2",
    "http-client",
    "gitPython",
    "ansible-lint",
    "jmespath"
]
