[project]
name = "omnia_provision"
version = "0.1.0"
description = "Python environment for the Omnia Provision container."
requires-python = ">= 3.11"
dependencies = [
    "psycopg2-binary==2.9.10",
    "requests==2.32.4",
    "pyarrow",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "netaddr==1.3.0",
    "pexpect==4.9.0",
    "pyinstaller",
    "psutil==6.1.1",
    "commented-configparser",
    "pyyaml",
    "cryptography==44.0.1",
    "iprange-python"
]